doc/windows/Delphi/32bit/multi_card/gts.pas


//ExtMdl
function GT_OpenExtMdl(cardNum:SmallInt ;out pDllName:String): SmallInt; stdcall; External GTDLL;
function GT_CloseExtMdl(cardNum:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SwitchtoCardNoExtMdl(cardNum:SmallInt ;card:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_ResetExtMdl(cardNum:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_LoadExtConfig(cardNum:SmallInt ;var pFileName:String): SmallInt; stdcall; External GTDLL;
function GT_SetExtIoValue(cardNum:SmallInt ;mdl:SmallInt;value:Word): SmallInt; stdcall; External GTDLL;
function GT_GetExtIoValue(cardNum:SmallInt ;mdl:SmallInt;out pValue:Word): SmallInt; stdcall; External GTDLL;
function GT_SetExtIoBit(cardNum:SmallInt ;mdl:SmallInt;index:SmallInt;value:Word): SmallInt; stdcall; External GTDLL;
function GT_GetExtIoBit(cardNum:SmallInt ;mdl:SmallInt;index:SmallInt;out pValue:Word): SmallInt; stdcall; External GTDLL;
function GT_GetExtAdValue(cardNum:SmallInt ;mdl:SmallInt;chn:SmallInt;out pValue:Word): SmallInt; stdcall; External GTDLL;
function GT_GetExtAdVoltage(cardNum:SmallInt ;mdl:SmallInt;chn:SmallInt;out pValue:Double): SmallInt; stdcall; External GTDLL;
function GT_SetExtDaValue(cardNum:SmallInt ;mdl:SmallInt;chn:SmallInt;value:Word): SmallInt; stdcall; External GTDLL;
function GT_SetExtDaVoltage(cardNum:SmallInt ;mdl:SmallInt;chn:SmallInt;value:Double): SmallInt; stdcall; External GTDLL;
function GT_GetStsExtMdl(cardNum:SmallInt ;mdl:SmallInt;chn:SmallInt;var pStatus:Word): SmallInt; stdcall; External GTDLL;
function GT_GetExtDoValue(cardNum:SmallInt ;mdl:SmallInt;var pValue:Word): SmallInt; stdcall; External GTDLL;
function GT_GetExtMdlMode(cardNum:SmallInt ;var pMode:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetExtMdlMode(cardNum:SmallInt ;mode:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_UploadConfig(cardNum:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_DownloadConfig(cardNum:SmallInt): SmallInt; stdcall; External GTDLL;

function GT_GetUuid(cardNum:SmallInt ;out pCode:String;count:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetUuid(cardNum:SmallInt ;var pCode:String;count:SmallInt): SmallInt; stdcall; External GTDLL;

//////////////////////////////////////////////////////////////////////////////////////
//2D Compensate

type TCompensate2DTable = record  
	count:array[0..1] of SmallInt;
    posBegin:array[0..1] of LongInt;                       
	step:array[0..1] of LongInt;                                                      
end;

type TCompensate2D = record   
    enable:SmallInt;                               
	tableIndex:SmallInt;                            
	axisType:array[0..1] of SmallInt;	                         
	axisIndex:array[0..1] of SmallInt;	                         
end;

function GT_SetCompensate2DTable(cardNum:SmallInt ;tableIndex : SmallInt;var pTable:TCompensate2DTable ;var pData:LongInt;externComp:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_GetCompensate2DTable(cardNum:SmallInt ;tableIndex : SmallInt;out pTable:TCompensate2DTable ;out pExternComp:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetCompensate2D(cardNum:SmallInt ;axis : SmallInt;var pComp2d:TCompensate2D): SmallInt; stdcall; External GTDLL;
function GT_GetCompensate2D(cardNum:SmallInt ;axis : SmallInt;out pComp2d:TCompensate2D): SmallInt; stdcall; External GTDLL;
function GT_GetCompensate2DValue(cardNum:SmallInt ;axis : SmallInt;out pValue:Double): SmallInt; stdcall; External GTDLL;

//Smart Home
Const HOME_STAGE_IDLE = 0;
Const HOME_STAGE_START = 1;
Const HOME_STAGE_ON_HOME_LIMIT_ESCAPE = 2;
Const HOME_STAGE_SEARCH_LIMIT = 10;
Const HOME_STAGE_SEARCH_LIMIT_STOP = 11;
Const HOME_STAGE_SEARCH_LIMIT_ESCAPE = 13;
Const HOME_STAGE_SEARCH_LIMIT_RETURN = 15;
Const HOME_STAGE_SEARCH_LIMIT_RETURN_STOP = 16;
Const HOME_STAGE_SEARCH_HOME = 20;
Const HOME_STAGE_SEARCH_HOME_STOP = 22;
Const HOME_STAGE_SEARCH_HOME_RETURN = 25;
Const HOME_STAGE_SEARCH_INDEX = 30;
Const HOME_STAGE_SEARCH_GPI = 40;
Const HOME_STAGE_SEARCH_GPI_RETURN = 45;
Const HOME_STAGE_GO_HOME = 80;
Const HOME_STAGE_END = 100;
Const HOME_ERROR_NONE = 0;
Const HOME_ERROR_NOT_TRAP_MODE = 1;
Const HOME_ERROR_DISABLE = 2;
Const HOME_ERROR_ALARM = 3;
Const HOME_ERROR_STOP = 4;
Const HOME_ERROR_STAGE = 5;
Const HOME_ERROR_HOME_MODE = 6;
Const HOME_ERROR_SET_CAPTURE_HOME = 7;
Const HOME_ERROR_NO_HOME = 8;
Const HOME_ERROR_SET_CAPTURE_INDEX = 9;
Const HOME_ERROR_NO_INDEX = 10;
Const HOME_MODE_LIMIT = 10;
Const HOME_MODE_LIMIT_HOME = 11;
Const HOME_MODE_LIMIT_INDEX = 12;
Const HOME_MODE_LIMIT_HOME_INDEX = 13;
Const HOME_MODE_HOME = 20;
Const HOME_MODE_HOME_INDEX = 22;
Const HOME_MODE_INDEX = 30;
Const HOME_MODE_FORCED_HOME = 40;
Const HOME_MODE_FORCED_HOME_INDEX = 41;

type THomePrm = record
	mode:SmallInt;					
	moveDir:SmallInt;				
	indexDir:SmallInt;				
	edge:SmallInt;					
	triggerIndex:SmallInt;	
	pad1:array[0..2] of SmallInt;					
	velHigh:Double;				
	velLow:Double;				
	acc:Double;					
	dec:Double;	
	smoothTime:SmallInt;
	pad2:array[0..2] of SmallInt;				
	homeOffset:LongInt;				
	searchHomeDistance:LongInt;		
	searchIndexDistance:LongInt;		
	escapeStep:LongInt;	
	pad3:array[0..1] of LongInt;							
end;

type THomeStatus = record
	run:SmallInt;
	stage:SmallInt;
	error:SmallInt;
	pad1:SmallInt;
	capturePos:LongInt;
	targetPos:LongInt;
end;
function GT_GoHome(cardNum:SmallInt ;axis : SmallInt;var pHomePrm:THomePrm ): SmallInt; stdcall; External GTDLL;
function GT_GetHomePrm(cardNum:SmallInt ;axis : SmallInt;out pHomePrm:THomePrm): SmallInt; stdcall; External GTDLL;
function GT_GetHomeStatus(cardNum:SmallInt ;axis : SmallInt;out pHomeStatus:THomeStatus ): SmallInt; stdcall; External GTDLL;

//Extern Control
type TControlConfigEx = record
	refType:SmallInt;			
	refIndex:SmallInt;			
	feedbackType:SmallInt;		
	feedbackIndex:SmallInt;		
	errorLimit:LongInt;		
	feedbackSmooth:SmallInt;	
	controlSmooth:SmallInt;	
end;
function GT_SetControlConfigEx(cardNum:SmallInt ;control:SmallInt;var pControl:TControlConfigEx ): SmallInt; stdcall; External GTDLL;
function GT_GetControlConfigEx(cardNum:SmallInt ;control:SmallInt;out pControl:TControlConfigEx ): SmallInt; stdcall; External GTDLL;

//Adc filter
type TAdcConfig = record
	active:SmallInt;	
	reverse:SmallInt;	
	a:Double;			
	b:Double;				
	filterMode:SmallInt;	
end;

function GT_SetAdcConfig(cardNum:SmallInt ;adc:SmallInt;var pAdc:TAdcConfig): SmallInt; stdcall; External GTDLL;
function GT_GetAdcConfig(cardNum:SmallInt ;adc:SmallInt;out pAdc:TAdcConfig): SmallInt; stdcall; External GTDLL;
function GT_SetAdcFilterPrm(cardNum:SmallInt ;adc:SmallInt;k:Double): SmallInt; stdcall; External GTDLL;
function GT_GetAdcFilterPrm(cardNum:SmallInt ;adc:SmallInt;out pk:double): SmallInt; stdcall; External GTDLL;

//Superimposed
function GT_SetControlSuperimposed(cardNum:SmallInt ;control:SmallInt;superimposedType:SmallInt;superimposedIndex:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetControlSuperimposed(cardNum:SmallInt ;control:SmallInt;out pSuperimposedType:SmallInt;out pSuperimposedIndex:SmallInt): SmallInt; stdcall; External GTDLL;

//
function GT_ZeroLaserOnTime(cardNum:SmallInt ;channel:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetLaserOnTime(cardNum:SmallInt ;channel:SmallInt;out pTime:LongWord): SmallInt; stdcall; External GTDLL;

function GT_SetProfileScale(cardNum:SmallInt ;axis:SmallInt;alpha:LongInt;beta:LongInt): SmallInt; stdcall; External GTDLL;
function GT_GetProfileScale(cardNum:SmallInt ;axis:SmallInt;out pAlpha:LongInt;out pBeta:LongInt): SmallInt; stdcall; External GTDLL;
function GT_SetEncoderScale(cardNum:SmallInt ;axis:SmallInt;alpha:LongInt;beta:LongInt): SmallInt; stdcall; External GTDLL;
function GT_GetEncoderScale(cardNum:SmallInt ;axis:SmallInt;out pAlpha:LongInt;out pBeta:LongInt): SmallInt; stdcall; External GTDLL;

function GT_MultiAxisOn(cardNum:SmallInt ;mask:LongInt): SmallInt; stdcall; External GTDLL;
function GT_MultiAxisOff(cardNum:SmallInt ;mask:LongInt): SmallInt; stdcall; External GTDLL;
function GT_SetAxisOnDelayTime(cardNum:SmallInt ;ms:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetAxisOnDelayTime(cardNum:SmallInt ;out pMs:SmallInt): SmallInt; stdcall; External GTDLL;

function GT_SetLaserDisTable1D(cardNum:SmallInt ;count:SmallInt;var pRatio:Double;var pPos:LongInt;minPower:Double;maxPower:Double;var pLimitPower:Double;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_SetLaserDisTable2D(cardNum:SmallInt ;var axisIndex:SmallInt;var count:SmarllInt;var pRatio:Double;var pXPos:Double;var pYPos:Double;
																minPower:Double;maxPower:Double;var pLimitPower:Double;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_SetLaserDisTable2DEx(cardNum:SmallInt ;var axisIndex:SmallInt;var count:SmallInt;pRatio:Double;var posBegin:LongInt;var posStep:LongInt;
																	minPower:Double;maxPower:Double;var pLimitPower:Double;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_SetLaserCrdMap(cardNum:SmallInt ;channel:SmallInt;map:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetLaserCrdMap(cardNum:SmallInt ;channel:SmallInt;out pMap:SmallInt): SmallInt; stdcall; External GTDLL;

//AutoFocus
function GT_AutoFocus(cardNum:SmallInt ;mode:Word;kp:Double;reverse:SmallInt;chanel:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetAutoFocusRefVol(cardNum:SmallInt ;refVol:Double;maxVol:Double;minVol:Double;chanel:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetAutoFocusStatus(cardNum:SmallInt ;out pStatus:Word;count:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_ConfigAutoFocus(cardNum:SmallInt ;chnAdc:SmallInt;chanel:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetAutoFocusAuxPrm(cardNum:SmallInt ;kf:Double;kd:Double;limitKd:Double;chanel:SmallInt): SmallInt; stdcall; External GTDLL;

function GT_Delay(cardNum:SmallInt ;time:Word): SmallInt; stdcall; External GTDLL;
function GT_DelayHighPrecision(cardNum:SmallInt ;time:Word): SmallInt; stdcall; External GTDLL;

function GT_SetCrdBufferMode(cardNum:SmallInt ;crd:SmallInt;bufferMode:SmallInt;fifo:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetCrdBufferMode(cardNum:SmallInt ;crd:SmallInt;out pBufferMode:SmallInt;fifo:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetCrdSegmentTime(cardNum:SmallInt ;crd:SmallInt;segmentIndex:LongInt;out pSegmentTime:Double;out pSegmentNumber:LongInt;fifo:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetCrdTime(cardNum:SmallInt ;crd:SmallInt;out pTime:TCrdTime;fifo:SmallInt): SmallInt; stdcall; External GTDLL;

function GT_SetLeadScrewLink(cardNum:SmallInt ;axis:SmallInt;link:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetLeadScrewLink(cardNum:SmallInt ;axis:SmallInt;out pLink:SmallInt): SmallInt; stdcall; External GTDLL;

implementation

end.
